# python-project-83

./: Makefile  README.md  pyproject.toml
page_analyzer/: __init__.py  app.py  db_work.py  parser.py  urls.py
page_analyzer/templates/: base.html
