[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["ArturIash <4ezyyy@gmail.com>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"
Flask = "^2.3.2"
Jinja2 = "^3.1.2"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
